# zoom-sdk-linux-rs

./: .gitignore  Cargo.toml  LICENSE  README.MD  build.rs  extract.so.sh
src/: bindings.rs  jwt_helper.rs  lib.rs  meeting_url.rs  public_types.rs  rawdata.rs  services.rs
src/rawdata/: audio.rs  video.rs
src/services/: auth_service.rs  meeting_service.rs  setting_service.rs
src/services/meeting_service/: audio_controller.rs  chat_interface.rs  participants_interface.rs  recording_controller.rs  reminder_controller.rs  sharing_controller.rs  webcam_interface.rs
src/services/setting_service/: audio_context.rs
wrapper-cpp/: c_auth_service_interface.cpp  c_auth_service_interface.h  c_meeting_service_interface.cpp  c_meeting_service_interface.h  c_network_connection_handler_interface.cpp  c_network_connection_handler_interface.h  c_setting_service_interface.cpp  c_setting_service_interface.h
wrapper-cpp/modules/: c_meeting_audio_interface.cpp  c_meeting_audio_interface.h  c_meeting_chat_interface.cpp  c_meeting_chat_interface.h  c_meeting_participants_interface.cpp  c_meeting_participants_interface.h  c_meeting_share_interface.cpp  c_meeting_share_interface.h  c_rawdata_audio_helper.cpp  c_rawdata_audio_helper.h  c_rawdata_video_helper.cpp  c_rawdata_video_helper.h  c_rawdata_video_source.cpp  c_rawdata_video_source.h  c_recording_controller.cpp  c_recording_controller.h
zoom-meeting-sdk-linux/h/: auth_service_interface.h  meeting_service_interface.h  network_connection_handler_interface.h  setting_service_interface.h  zoom_sdk.h  zoom_sdk_def.h
(+192 files in other folders)
