[package]
name = "zoom-sdk-linux-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.2.1"

[dependencies]
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
chrono = "0.4.38"
serde = "1.0.215"
base64 = "0.22.1"
glib = "0.20.6"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.4"
regex = "1.11.1"