[package]
name = "zoom-sdk-linux-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.32"

[dependencies]
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
chrono = "0.4.31"
serde = "1.0.219"
base64 = "0.22.1"
glib = "0.21.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
regex = "1.11.1"